--- a/index.html
+++ b/index.html
@@ -76,7 +76,11 @@
             "personnages de Star Wars",
             "personnages de Fortnite",
             "dirigeants mondiaux",
-            "personnages de Manga célèbres"
+            "personnages de Manga célèbres",
+            "personnages de Game of Thrones",
+            "personnages de Breaking Bad",
+            "personnages de Friends"
+
         ];
 
         var tabmedia = [
