--- a/index.html
+++ b/index.html
@@ -50,39 +50,36 @@
             "Ce génie de l'animation",
             "Ce street artiste"
         ];
-
         var tabverbe = [
             "dessine des",
             "reproduit des",
             "peint des",
             "détourne des photos de",
-            "imagine les",
+            "réimagine les",
             "parodie des",
             "fait des bandes-déssinées avec des",
             "met en scène des",
             "revisite des"
         ];
-
         var tabperso = [
             "personnages de la pop culture",
             "princesses Disney",
             "super-héros Marvel",
             "Pokemon de la première génération",
             "personnages DC Comics",
-            "chats célèbres sur internet",
+            "chats célèbres d'internet",
             "personnages de Stranger Things",
             "popstars iconiques",
             "personnages de Dragon Ball",
             "personnages de Star Wars",
             "personnages de Fortnite",
             "dirigeants mondiaux",
-            "personnages de Manga célèbres",
+            "personnages de manga célèbres",
             "personnages de Game of Thrones",
             "personnages de Breaking Bad",
-            "personnages de Friends"
+            "personnages de Friends",
 
         ];
-
         var tabmedia = [
             "avec ses excréments",
             "avec du sable noir volcanique",
@@ -106,10 +103,10 @@
             "pour rendre hommage aux réfugiés",
             "pour apporter un message de paix",
             "vivant dans l'ex-URSS",
-            "en stop motion"
+            "en stop motion",
+            "façon film d'horreur pour Halloween"
         ];
-
-        tabmaster = [tabsujet, tabverbe, tabperso, tabmedia];
+        var tabmaster = [tabsujet, tabverbe, tabperso, tabmedia];
 
         var textes = document.getElementsByTagName('p');
         var btn = document.getElementById('btn');
@@ -128,7 +125,6 @@
             for (let i = 0; i < textes.length; i++) {
                 textes[i].innerText = tabmaster[i][getRandomInt(tabmaster[i].length)];
                 phrase.push(textes[i].innerText)
-                console.log(phrase);
                 tweet.href = 'https://twitter.com/intent/tweet?text=From Générateur de titres bullshit : "' + phrase[0] + ' ' + phrase[1] + ' ' + phrase[2] + ' ' + phrase[3] + '"'
             }
         }
